# swiss-holidays-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  live-tests.yml  publish.yml
audits/2026-07-20T184122-Z-swiss-school-calendar-mcp/: audit-meta.json  audit-report.md  findings-detail.json  profile.yaml  summary.json  verification-results.json
audits/2026-07-20T184122-Z-swiss-school-calendar-mcp/findings/: ARCH-002.md  ARCH-003.md  ARCH-004.md  ARCH-007.md  ARCH-008.md  ARCH-009.md  ARCH-011.md  ARCH-012.md  CH-006.md  OBS-002.md  OBS-003.md  OPS-003.md  SDK-001.md  SDK-003.md  SDK-004.md  SEC-004.md  SEC-005.md  SEC-007.md  SEC-016.md  SEC-018.md  SEC-021.md
audits/2026-07-20T184122-Z-swiss-school-calendar-mcp/raw/: ARCH.json  OBS_OPS_CH.json  SDK_SCALE.json  SEC.json
audits/2026-07-20T210848-Z-swiss-school-calendar-mcp/: audit-meta.json  audit-report.md  findings-detail.json  summary.json  verification-results.json
audits/2026-07-20T210848-Z-swiss-school-calendar-mcp/findings/: ARCH-002.md  ARCH-003.md  ARCH-011.md  OBS-003.md  SDK-003.md  SDK-004.md  SEC-005.md  SEC-021.md
audits/2026-07-20T210848-Z-swiss-school-calendar-mcp/raw/: ARCH.json  ARCH_reverify.json  OBS_OPS_CH.json  SDK_SCALE.json  SEC.json
audits/2026-07-23T140326-Z-swiss-holidays-mcp/: applicability.json  applicability.txt  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-07-23T140326-Z-swiss-holidays-mcp/findings/: ARCH-002.md  ARCH-003.md  ARCH-011.md  OBS-002.md  OBS-003.md  SCALE-002.md  SDK-003.md  SDK-004.md  SEC-005.md  SEC-021.md
audits/2026-07-24T073448-Z-swiss-holidays-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-07-24T073448-Z-swiss-holidays-mcp/findings/: ARCH-011.md  SEC-005.md
audits/2026-07-24T091128-Z-swiss-holidays-mcp/: audit-meta.json  audit-report.md  profile.yaml  release-proposal.json  summary.json  verification-results.json
deploy/: cilium-egress-fqdn.yaml  networkpolicy.yaml
docs/: network-egress.md  roadmap.md  scaling.md  security.md
src/swiss_holidays_mcp/: __init__.py  __main__.py  client.py  constants.py  guard.py  ical.py  logging_setup.py  models.py  pinning.py  server.py  settings.py
src/swiss_school_calendar_mcp/: __init__.py  __main__.py  client.py  constants.py  logging_setup.py  models.py  server.py  settings.py
tests/: conftest.py  test_feed.py  test_http_cors.py  test_ical.py  test_live.py  test_local.py  test_logging.py  test_pinning.py  test_resilience.py  test_tools.py
