[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-holidays-mcp"
version = "0.3.0"
description = "Swiss holiday calendar for AI agents — public holidays, school holidays (by Schulart) and long weekends for all 26 cantons"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "malkreide" }]
keywords = ["mcp", "model-context-protocol", "llm", "swiss-open-data", "holidays", "public-holidays", "school-holidays"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "mcp>=1.28.1,<2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
swiss-holidays-mcp = "swiss_holidays_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-holidays-mcp"
Issues = "https://github.com/malkreide/swiss-holidays-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_holidays_mcp"]

[tool.hatch.build.targets.sdist]
# Keep the released sdist lean: ship source, tests, README/CHANGELOG/LICENSE,
# but not the audit artifacts, docs tree, or CI config.
exclude = [
    "/audits",
    "/docs",
    "/.github",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits the real upstream API (excluded from CI)"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
